Oppdaterte 045 og 046 i forbindelse med flasking.

--- a/feed/index.html
+++ b/feed/index.html
@@ -12,7 +12,7 @@
 	<atom:link href="http://127.0.0.1/feed/" rel="self" type="application/rss+xml" />
 	<link>http://127.0.0.1</link>
 	<description>Øl, brygging og oppskrifter</description>
-	<lastBuildDate>Thu, 22 Feb 2018 12:57:19 +0000</lastBuildDate>
+	<lastBuildDate>Wed, 21 Mar 2018 20:44:44 +0000</lastBuildDate>
 	<language>nb-NO</language>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
 	<sy:updateFrequency>1</sy:updateFrequency>
@@ -249,6 +249,7 @@
 <p>Endte etter kok med 25,7 L vørter med en sukkermengde (OG) på 1057. Mye bedre en forventet.</p>
 <p>Skal nå stå 3 uker på 12 C. Temperaturen økes til 17 C de 3 siste dagene.</p>
 <p>Beer Brew er en fin maskin men vil fortsette å brygge på Grainfather da den er hakket bedre. <img src="https://s.w.org/images/core/emoji/2.4/72x72/1f609.png" alt="😉" class="wp-smiley" style="height: 1em; max-height: 1em;" /></p>
+<p>20180321-1900: Overførte ølet til både fat og flasker. Hadde skikkelig problemer med å overføre ølet siden heverten tettet seg. FG endte på 1017 som er en del høyere enn forventet. Alkoholprosenten vil da bli 5,25%. Smaken var uansett skikkelig god, virket nesten litt tørr(?). Blir spennende å sammenligne med første utgaven av samme øl!</p>
 ]]></content:encoded>
 			</item>
 		<item>
@@ -521,6 +522,7 @@
 <ul>
 <li>Mye raskere oppvarming med dyppvarmeren. Må bare passe på at den får egen kurs når den brukes.</li>
 </ul>
+<p>20180321-1900: Overførte ølet til både fat og flasker. Endte med en FG på 1010, noe høyere enn forventet, som gir en alkoholprosent på 4,46%. Smaken var uansett virkelig god. Gleder meg!</p>
 ]]></content:encoded>
 			</item>
 		<item>
